--- a/src/layout/layoutWithSidebar.module.scss
+++ b/src/layout/layoutWithSidebar.module.scss
@@ -2,6 +2,7 @@
 
 $breakpoint: 992px;
 $breakpoint-max: 991px;
+$sidebar-tab-width: 3em;
 .wrapper {
     display: grid;
     grid-template-rows: auto minmax(0, 1fr) auto;
@@ -31,6 +32,21 @@ $breakpoint-max: 991px;
     grid-column: 2;
     display: flex;
 }
+.backdrop {
+    display: none;
+    @media screen and (max-width: $breakpoint-max) {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 9;
+        background: rgba(0, 0, 0, 0.3);
+        &.backdropVisible {
+            display: block;
+        }
+    }
+}
 .aside {
     z-index: 10;
     max-width: 500px;
@@ -47,9 +63,9 @@ $breakpoint-max: 991px;
         transition: left 0.3s ease;
         &.closed {
             max-width: 100%;
-            left: calc(-100% + 2em);
+            left: calc(-100% + #{$sidebar-tab-width});
             .sidebarContent {
-                left: calc(-2em);
+                left: calc(-#{$sidebar-tab-width});
             }
             .closeButtonWrapper {
                 right: 0;
@@ -62,15 +78,16 @@ $breakpoint-max: 991px;
             transition: right 0.3s ease;
             background: var(--bg-light);
             z-index: 20;
-            width: 2em;
-            height: 4em;
+            width: $sidebar-tab-width;
+            height: 5em;
             transform: translateY(-50%);
             border-top-right-radius: var(--panel-border-radius);
             border-bottom-right-radius: var(--panel-border-radius);
             box-shadow: var(--box-shadow);
+            touch-action: manipulation;
             &.open {
                 box-shadow: none;
-                height: 2em;
+                height: $sidebar-tab-width;
                 top: spacing.$padding-s;
                 transform: translateY(0);
             }
@@ -98,6 +115,9 @@ $breakpoint-max: 991px;
     align-items: center;
     gap: spacing.$mainpadding;
     margin: 0 spacing.$padding-xl 0 spacing.$padding-s;
+    @media screen and (max-width: $breakpoint-max) {
+        margin: 0 spacing.$padding-s;
+    }
     a {
         color: var(--secondary);
         font-size: 0.9em;
